--- a/Simple Chatbot.ipynb
+++ b/Simple Chatbot.ipynb
@@ -89,7 +89,7 @@
    "source": [
     "## Imports\n",
     "\n",
-    "These are the ONLY imports you can use for this part of the assignment."
+    "These are the ONLY imports we will use.."
    ]
   },
   {
@@ -589,7 +589,7 @@
    "source": [
     "# Giving Aleeza Emotional Intelligence\n",
     "\n",
-    "In the next part of the assignment, we will be giving the chatbot some emotional intelligence. This will be done by training a simple emotion classification model. We will then use this model to classify the sentiment of the user's input and respond accordingly.\\\n",
+    "In the next part of the file, we will be giving the chatbot some emotional intelligence. This will be done by training a simple emotion classification model. We will then use this model to classify the sentiment of the user's input and respond accordingly.\\\n",
     "\\\n",
     "How our logic will work is as follows:\n",
     "1. If there is a match in the response table, we will use the response from the table.\n",
